--- a/css/map.css
+++ b/css/map.css
@@ -24,7 +24,7 @@ body * {
   bottom: 100px;
   width: 100%;
   border: 0.5px solid #00000040 !important;
-  height: 400px;
+  height: 89vh;
 }
 
 .punt-clicks {
@@ -285,6 +285,23 @@ label {
   .mb-watermark {
     margin-left: 33.3333%;
   }
+  #map {
+    height: 100%;
+  }
+}
+
+/* Tablet */
+@media only screen and (max-width:770px) {
+  .listing-container {
+    width: 33.3333%;
+  }
+
+  .mb-watermark {
+    margin-left: 33.3333%;
+  }
+  #map {
+    height: 80vh;
+  }
 }
 
 /* Mobile */
@@ -316,7 +333,7 @@ label {
   }
 
   #map {
-    height: 60%;
+    height: 80vh;
   }
 
   .mapboxgl-ctrl-logo {
